# LABscript

./: CMakeLists.txt  README.md  keywordHash.h  keywords.gperf  lab.c  lexer.c  out  parser.c  pipe.c  preprocess.c  share.h  tokens.h
src/: keywords.gperf  lexer.c  main.c  parser.c  preprocess.c  share.h  tokens.h
tests/: example.lab  example1.lab
